Добавлены плейлисты. Исправлены ошибки.

--- a/add.html
+++ b/add.html
@@ -15,7 +15,7 @@
 			media-src 'self' https://cf-media.sndcdn.com; 
 			img-src 'self' https://*.sndcdn.com
 		">
-		<title>SANA Radio</title>
+		<title>Добавить трек - SANA Radio</title>
 		
 		<link rel="stylesheet" href="./assets/css/fontawesome.css" />
 		<link rel="stylesheet" href="./assets/css/add.css" />
