--- a/index.html
+++ b/index.html
@@ -29,20 +29,23 @@
 				<p class="TrackAuthor">С любовью от SANA Player</p>
 				
 				<div class="TrackControl">
-					<button class="TrackPlayList"><i class="fas fa-list"></i></button>
-					<button class="TrackAdd"><i class="fas fa-plus"></i></button>
+					<button class="TrackPlayList" title="Плейлисты"><i class="fas fa-list"></i></button>
+					<button class="TrackAdd" title="Добавить трек"><i class="fas fa-plus"></i></button>
 				</div>
 			</div>
 			
 			<div class="TrackPanel">
-				<button class="TrackBack"><i class="fas fa-angle-double-left"></i></button>
-				<button class="TrackPlayPause"><i class="fas fa-play"></i></button>
-				<button class="TrackNext"><i class="fas fa-angle-double-right"></i></button>
+				<button class="TrackRandom" title="Случайная песня"><i class="fas fa-random"></i></button>
+				<button class="TrackRepeat" title="Повтор текущей песни"><i class="fas fa-repeat"></i></button>
+			
+				<button class="TrackBack" title="Предыдущая песня"><i class="fas fa-angle-double-left"></i></button>
+				<button class="TrackPlayPause" title="Воспроизвести / Пауза"><i class="fas fa-play"></i></button>
+				<button class="TrackNext" title="Следующая песня"><i class="fas fa-angle-double-right"></i></button>
 				
 				<p class="TrackDuration"><span class="TrackListened">00:00</span> / <span class="TrackFullDuration">00:00</span></p>
 
 				<div class="TrackVolume">
-					<button class="TrackMute"><i class="fas fa-volume"></i></button>
+					<button class="TrackMute" title="Открыть регулятор громкости"><i class="fas fa-volume"></i></button>
 
 					<div class="TrackVolumeSlider">
 						<input type="range" min="1" max="100" value="100" step="0.5" > 
