Добавлена возможность слушать песни с YouTube Music

--- a/add.html
+++ b/add.html
@@ -7,13 +7,13 @@
 			default-src 'self'; 
 			script-src 'self'; 
 			media-src 'self' https://cf-media.sndcdn.com; 
-			img-src 'self' https://*.sndcdn.com
+			img-src 'self' https://*.sndcdn.com https://i.ytimg.com
 		">
 		<meta http-equiv="X-Content-Security-Policy" content="
 			default-src 'self'; 
 			script-src 'self'; 
 			media-src 'self' https://cf-media.sndcdn.com; 
-			img-src 'self' https://*.sndcdn.com
+			img-src 'self' https://*.sndcdn.com https://i.ytimg.com
 		">
 		<title>Добавить трек - SANA Radio</title>
 		
