--- a/playlist.html
+++ b/playlist.html
@@ -23,6 +23,7 @@
 	<body>
 		
 		<header>
+			<button class="TrackBack" title="Вернуться к списку плейлистов"><i class="fas fa-arrow-left"></i></button>
 			<label for="search" class="TrackSearch"><i class="fas fa-search"></i></label>
 			<input type="search" id="search" name="search" class="TrackSearch" placeholder="e.g. Alan Walker, Into the night, Michel Jekson..." />
 			<button class="TrackAdd" title="Добавить песню"><i class="fas fa-plus"></i></button>
